--- a/src/http/views/partials/pagination.hbs
+++ b/src/http/views/partials/pagination.hbs
@@ -1,17 +1,18 @@
 <section class="pagination-container">
+
     {{#if pagination.hasPrevPage}}
-    <a href="{{pagination.baseUrl}}?page=1&limit={{pagination.limit}}"
-        class="pagination-btn pagination-btn-tertiary">&laquo;</a>
+    <a href="{{ pagination.baseUrl }}?page={{pagination.prevPage}}&limit={{pagination.limit}}{{#if pagination.filter}}&filter={{pagination.filter}}{{/if}}"
+        class="pagination-btn pagination-btn-primary">&lt;</a>
     {{/if}}
 
     {{#if pagination.hasPrevPage}}
-    <a href="{{ pagination.baseUrl }}?page={{pagination.prevPage}}&limit={{pagination.limit}}"
-        class="pagination-btn pagination-btn-primary">&lt;</a>
+    <a href="{{pagination.baseUrl}}?page=1&limit={{pagination.limit}}{{#if pagination.filter}}&filter={{pagination.filter}}{{/if}}"
+        class="pagination-btn pagination-btn-tertiary">1</a>
     {{/if}}
 
     {{#if pagination.skipBackPage}}
     {{#unless (eq pagination.skipBackPage pagination.currentPage)}}
-    <a href="{{pagination.baseUrl}}?page={{pagination.skipBackPage}}&limit={{pagination.limit}}"
+    <a href="{{pagination.baseUrl}}?page={{pagination.skipBackPage}}&limit={{pagination.limit}}{{#if pagination.filter}}&filter={{pagination.filter}}{{/if}}"
         class="pagination-btn pagination-btn-tertiary">{{pagination.skipBackPage}}</a>
     <span>...</span>
     {{/unless}}
@@ -22,25 +23,25 @@
     {{#if pagination.skipForwardPage}}
     {{#unless (eq pagination.skipForwardPage pagination.currentPage)}}
     <span>...</span>
-    <a href="{{pagination.baseUrl}}?page={{pagination.skipForwardPage}}&limit={{pagination.limit}}"
+    <a href="{{pagination.baseUrl}}?page={{pagination.skipForwardPage}}&limit={{pagination.limit}}{{#if pagination.filter}}&filter={{pagination.filter}}{{/if}}"
         class="pagination-btn pagination-btn-tertiary">{{pagination.skipForwardPage}}</a>
     {{/unless}}
     {{/if}}
 
     {{#if pagination.hasNextPage}}
-    <a href="{{pagination.baseUrl}}?page={{pagination.nextPage}}&limit={{pagination.limit}}"
-        class="pagination-btn pagination-btn-primary">&gt;</a>
+    <a href="{{pagination.baseUrl}}?page={{pagination.totalPages}}&limit={{pagination.limit}}{{#if pagination.filter}}&filter={{pagination.filter}}{{/if}}"
+        class="pagination-btn pagination-btn-tertiary">{{pagination.totalPages}}</a>
     {{/if}}
 
     {{#if pagination.hasNextPage}}
-    <a href="{{pagination.baseUrl}}?page={{pagination.totalPages}}&limit={{pagination.limit}}"
-        class="pagination-btn pagination-btn-tertiary">&raquo;</a>
+    <a href="{{pagination.baseUrl}}?page={{pagination.nextPage}}&limit={{pagination.limit}}{{#if pagination.filter}}&filter={{pagination.filter}}{{/if}}"
+        class="pagination-btn pagination-btn-primary">&gt;</a>
     {{/if}}
 
     <form method="get" action="{{pagination.baseUrl}}" class="flex items-center gap-2 mb-4 mt-2">
         <input type="hidden" name="page" value="{{pagination.currentPage}}">
-        {{#if filter}}
-        <input type="hidden" name="filter" value="{{filter}}">
+        {{#if pagination.filter}}
+        <input type="hidden" name="filter" value="{{pagination.filter}}">
         {{/if}}
         <select id="limit" name="limit" class="input-field w-20 text-center py-1 pl-0 pr-2 
                 text-xs sm:text-sm bg-white border border-teal-300 rounded focus:ring-2 
