--- a/src/http/views/partials/pagination.hbs
+++ b/src/http/views/partials/pagination.hbs
@@ -18,7 +18,7 @@
     {{/unless}}
     {{/if}}
 
-    <span class="pagination-btn pagination-btn-secondary" aria-current="page">{{pagination.currentPage}}</span>
+    <span class="pagination-btn pagination-btn-current" aria-current="page">{{pagination.currentPage}}</span>
 
     {{#if pagination.skipForwardPage}}
     {{#unless (eq pagination.skipForwardPage pagination.currentPage)}}
