--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -1772,6 +1772,10 @@ select {
   left: auto;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .static {
   position: static;
 }
@@ -1796,8 +1800,24 @@ select {
   left: 0px;
 }
 
+.left-3 {
+  left: 0.75rem;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
+
 .top-0 {
   top: 0px;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .mx-1 {
@@ -1865,6 +1885,10 @@ select {
   display: inline-block;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
@@ -1889,6 +1913,10 @@ select {
   height: 4rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -1909,6 +1937,10 @@ select {
   width: 5rem;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .w-6 {
   width: 1.5rem;
 }
@@ -1927,6 +1959,11 @@ select {
 
 .flex-shrink {
   flex-shrink: 1;
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .transform {
@@ -2075,6 +2112,10 @@ select {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
+.p-1 {
+  padding: 0.25rem;
+}
+
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
@@ -2195,6 +2236,11 @@ select {
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
 }
 
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity, 1));
+}
+
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity, 1));
@@ -2250,6 +2296,16 @@ select {
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-150 {
   transition-duration: 150ms;
 }
 
@@ -2376,6 +2432,49 @@ select {
   color: darkred;
 }
 
+.filter-input {
+  width: 100%;
+  border-radius: 0.375rem;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(110 218 209 / var(--tw-border-opacity, 1));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 2.75rem;
+  padding-right: 3rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.filter-input:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+/* On hover: border becomes teal, glow slightly stronger but still max 8px */
+
+.filter-input:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(40 173 168 / var(--tw-border-opacity, 1));
+  box-shadow: 0 0 2px 0 rgba(44, 200, 202, 0.4);
+}
+
+/* On active/focus: border teal, ring, glow at max 8px */
+
+.filter-input:focus,
+.filter-input:active {
+  --tw-border-opacity: 1;
+  border-color: rgb(40 173 168 / var(--tw-border-opacity, 1));
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(64 193 186 / var(--tw-ring-opacity, 1));
+  box-shadow: 0 0 4px 0 rgba(44, 200, 202, 0.5);
+  background: #edf9f8;
+}
+
 .foil-badge {
   margin-left: 0.25rem;
   display: inline-flex;
@@ -2400,21 +2499,26 @@ select {
 .input-field {
   margin-top: 0.25rem;
   width: 100%;
-  border-radius: 0.5rem;
+  border-radius: 0.375rem;
   border-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+  border-color: rgb(64 193 186 / var(--tw-border-opacity, 1));
   padding: 0.75rem;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .input-field:focus {
-  outline: 2px solid transparent;
-  outline-offset: 2px;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(40 173 168 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(64 193 186 / var(--tw-ring-opacity, 1));
+  --tw-ring-opacity: 0.6;
+}
+
+.input-field {
+  box-shadow: 0 0 8px 0 rgba(44, 200, 202, 0.3);
 }
 
 .input-label {
@@ -2635,7 +2739,7 @@ select {
   --tw-ring-color: rgb(110 218 209 / var(--tw-ring-opacity, 1));
 }
 
-.pagination-btn-secondary {
+.pagination-btn-current {
   pointer-events: none;
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
