--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -1,4 +1,4 @@
-<article>
+<div class="w-full mx-auto">
     <section class="card-info flex flex-col md:flex-row section-container">
 
         <section class="md:w-1/3 mb-4 md:mb-6">
@@ -74,7 +74,7 @@
             <tbody>
                 {{#each otherPrintings as |p|}}
                 <tr class="table-row">
-                    <td class="set-icon py-2"><i class="ss ss-{{p.setCode}}"></i></td>
+                    <td class="set-icon py-2"><i class="ss ss-{{p.setCode}}">r</i></td>
                     <td class="card-name-link py-2" data-id="{{p.cardId}}" data-img-src="{{p.imgSrc}}">
                         <a href="{{p.url}}">{{p.name}}</a>
                         {{>reserved card=p}}
@@ -99,5 +99,8 @@
             </tbody>
         </table>
     </section>
-</article>
+</div>
+
+{{>pagination}}
+
 <script src="/public/js/updateInventory.js" defer></script>
