--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -1,4 +1,4 @@
-<article>
+<div class="w-full mx-auto">
     <section class="card-info flex flex-col md:flex-row section-container">
 
         <section class="md:w-1/3 mb-4 md:mb-6">
@@ -99,5 +99,8 @@
             </tbody>
         </table>
     </section>
-</article>
+</div>
+
+{{>pagination}}
+
 <script src="/public/js/updateInventory.js" defer></script>
