--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -3,10 +3,46 @@
     <table class="min-w-full bg-white">
         <thead>
             <tr class="table-header-row">
-                <th class="table-header pl-2">Set</th>
-                <th class="table-header">Price</th>
-                <th class="table-header">Owned</th>
-                <th class="table-header xs-hide pr-2">Release Date</th>
+                <th class="table-header pl-2" data-sort="name">
+                    <button type="button" class="sort-btn" data-sort="name">
+                        Name
+                        <span class="sort-icon" data-sort="name">
+                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
+                                <path d="M10 14l6-6H4l6 6z" />
+                            </svg>
+                        </span>
+                    </button>
+                </th>
+                <th class="table-header" data-sort="price">
+                    <button type="button" class="sort-btn" data-sort="price">
+                        Total Value
+                        <span class="sort-icon" data-sort="price">
+                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
+                                <path d="M10 14l6-6H4l6 6z" />
+                            </svg>
+                        </span>
+                    </button>
+                </th>
+                <th class="table-header" data-sort="owned">
+                    <button type="button" class="sort-btn" data-sort="owned">
+                        Owned Value
+                        <span class="sort-icon" data-sort="owned">
+                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
+                                <path d="M10 14l6-6H4l6 6z" />
+                            </svg>
+                        </span>
+                    </button>
+                </th>
+                <th class="table-header xs-hide pr-2" data-sort="releaseDate">
+                    <button type="button" class="sort-btn" data-sort="releaseDate">
+                        Release Date
+                        <span class="sort-icon" data-sort="releaseDate">
+                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
+                                <path d="M10 14l6-6H4l6 6z" />
+                            </svg>
+                        </span>
+                    </button>
+                </th>
             </tr>
         </thead>
         <tbody>
