sort options enum, query options update up and down arrow svgs query util functions

--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -7,9 +7,7 @@
                     <button type="button" class="sort-btn" data-sort="name">
                         Name
                         <span class="sort-icon" data-sort="name">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
+                            {{>downarrow}}
                         </span>
                     </button>
                 </th>
@@ -17,9 +15,7 @@
                     <button type="button" class="sort-btn" data-sort="price">
                         Total Value
                         <span class="sort-icon" data-sort="price">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
+                            {{>downarrow}}
                         </span>
                     </button>
                 </th>
@@ -27,9 +23,7 @@
                     <button type="button" class="sort-btn" data-sort="owned">
                         Owned Value
                         <span class="sort-icon" data-sort="owned">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
+                            {{>downarrow}}
                         </span>
                     </button>
                 </th>
@@ -37,9 +31,7 @@
                     <button type="button" class="sort-btn" data-sort="releaseDate">
                         Release Date
                         <span class="sort-icon" data-sort="releaseDate">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
+                            {{>downarrow}}
                         </span>
                     </button>
                 </th>
