--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -16,67 +16,43 @@
     <table class="table-container">
         <thead>
             <tr class="table-header-row">
-                <th class="table-header pl-2" data-sort="owned">
-                    <button type="button" class="sort-btn" data-sort="owned">
+                <th class="table-header pl-2">
+                    <a href="#" class="sort-btn">
                         Owned
-                        <span class="sort-icon" data-sort="owned">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
-                        </span>
-                    </button>
+                        <span class="sort-icon">{{>downarrow}}</span>
+                    </a>
                 </th>
-                <th class="table-header" data-sort="number">
-                    <button type="button" class="sort-btn" data-sort="number">
+                <th class="table-header">
+                    <a href="#" class="sort-btn">
                         Card No.
-                        <span class="sort-icon" data-sort="number">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
-                        </span>
-                    </button>
+                        <span class="sort-icon">{{>downarrow}}</span>
+                    </a>
                 </th>
-                <th class="table-header" data-sort="name">
-                    <button type="button" class="sort-btn" data-sort="name">
+                <th class="table-header">
+                    <a href="#" class="sort-btn">
                         Name
-                        <span class="sort-icon" data-sort="name">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
-                        </span>
-                    </button>
+                        <span class="sort-icon">{{>downarrow}}</span>
+                    </a>
                 </th>
                 <th class="table-header xs-hide">Mana Cost</th>
                 <th class="table-header xs-hide">Rarity</th>
-                <th class="table-header xs-hide" data-sort="price">
-                    <button type="button" class="sort-btn" data-sort="price">
+                <th class="table-header xs-hide">
+                    <a href="#" class="sort-btn">
                         Price
-                        <span class="sort-icon" data-sort="price">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
-                        </span>
-                    </button>
+                        <span class="sort-icon">{{>downarrow}}</span>
+                    </a>
                 </th>
-                <th class="table-header xs-hide pr-2" data-sort="foilPrice">
-                    <button type="button" class="sort-btn" data-sort="foilPrice">
+                <th class="table-header xs-hide pr-2">
+                    <a href="#" class="sort-btn">
                         Foil Price
-                        <span class="sort-icon" data-sort="foilPrice">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
-                        </span>
-                    </button>
+                        <span class="sort-icon">{{>downarrow}}</span>
+                    </a>
                 </th>
-                <th class="table-header xs-show pr-2" data-sort="prices">
-                    <button type="button" class="sort-btn" data-sort="prices">
+                <th class="table-header xs-show pr-2">
+                    <a href="#" class="sort-btn">
                         Prices
-                        <span class="sort-icon" data-sort="prices">
-                            <svg class="w-3 h-3" viewBox="0 0 20 20" fill="currentColor">
-                                <path d="M10 14l6-6H4l6 6z" />
-                            </svg>
-                        </span>
-                    </button>
+                        <span class="sort-icon">{{>downarrow}}</span>
+                    </a>
                 </th>
             </tr>
         </thead>
